syntax = "proto3";

package user;
option go_package="./userProto";

message PageInfo {
  uint32 PageNum = 1;
  uint32 PageSize = 2;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string email = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
  string Image = 8;
  string Desc = 9;
}

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse);
  rpc GetUserByEmail(EmailRequest) returns (UserInfoResponse);
  rpc GetUserById(IdRequest) returns (UserInfoResponse);
  rpc GetUsersByIds(IdsRequest) returns (UserListResponse);
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse);
  rpc UpdateUser(UpdateUserInfo) returns (Empty);
  rpc CheckPasswordInfo (PasswordCheck) returns (CheckResponse);
  rpc DeleteUser(DeleteUserRequest) returns (Empty);
  rpc ChangePassword (ChangePasswordRequest) returns (Empty);
}

message Empty{}

message IdsRequest {
  repeated int32 Ids = 1;
}

message ChangePasswordRequest {
  int32 Id = 1;
  string OldPassword = 2;
  string NewPassword = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message PasswordCheck {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool success = 1;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

message EmailRequest {
  string email = 1;
}

message IdRequest {
  int32 id = 1;
}

message CreateUserInfo {
  string nickName = 1;
  string password = 2;
  string email = 3;
}

message UpdateUserInfo {
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 birthDay = 4;
  string Image = 5;
  string Desc = 6;
}
